<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.polvazo.saludate.Activity.login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/iconlogin" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/fondoedidtext"
                android:hint="@string/a_log_Usuario"
                android:inputType="text|textNoSuggestions"
                android:padding="10dp"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleDrawable="@mipmap/ic_launcher"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDark">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/fondoedidtext"
                android:hint="@string/a_log_Contrasenha"
                android:inputType="numberPassword"
                android:padding="10dp" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/check_recordar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/a_log_check_recordar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:background="@drawable/background_button"
                android:text="@string/a_log_btn_login"
                android:textAllCaps="false"
                android:textColor="@color/colorButton"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:background="@drawable/background_button"
                android:text="@string/a_log_btn_close"
                android:textAllCaps="false"
                android:textColor="@color/colorButton"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

