<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registercita"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/a_adi_nuevaCiata"
        android:textColor="@color/colorButton"
        android:textSize="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <Spinner
                android:id="@+id/spinner_Especialidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                                 />


            <Spinner
                android:id="@+id/spinner_Doctor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                />


            <Spinner
                android:id="@+id/spinner_Horario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"

                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/a_adi_descripcion"
                    android:textColor="@color/colorButton"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/fondoedidtext"
                    android:inputType="textMultiLine"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/a_adi_anotacion"
                    android:textColor="@color/colorButton"
                    android:textSize="20dp" />

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/fondoedidtext"
                    android:inputType="textMultiLine"
                    android:padding="10dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:text="@string/a_adi_nuevaCiata"
        android:textColor="@color/colorButton" />
    <Button
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/background_button"

        android:text="@string/a_adi_nuevaCiata"
        android:textColor="@color/colorButton" />
</LinearLayout>
</LinearLayout>
